--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.3.11",
     "@types/cross-spawn": "^6.0.2",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^18.11.8",
     "@types/prismjs": "^1.26.0",
+    "@types/rewire": "^2.5.30",
     "c8": "^9.1.0",
     "chai": "^4.3.6",
-    "chai-as-promised": "^7.1.1",
     "eslint": "^8.23.0",
     "eslint-config-hexo": "^5.0.0",
     "html-entities": "^2.3.3",
